--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,71 @@
 {
     "cSpell.words": [
-        "titulo"
+        "alternativo",
+        "Anticipada",
+        "años",
+        "apertura",
+        "AQUI",
+        "ASTROFALICOS",
+        "bailar",
+        "cargado",
+        "Carrusel",
+        "Comentarios",
+        "Componentes",
+        "compra",
+        "Conciertos",
+        "Contacto",
+        "Contactos",
+        "contenedor",
+        "cual",
+        "Descripcion",
+        "desde",
+        "Difunder",
+        "Discordia",
+        "ECLYPSE",
+        "EJECUTORES",
+        "elementor",
+        "encargados",
+        "enero",
+        "Enlazadas",
+        "ENTRADA",
+        "ENTRADAS",
+        "EVENTOS",
+        "fecha",
+        "haceros",
+        "homónimo",
+        "Horarios",
+        "imagen",
+        "Informacion",
+        "KONTAKT",
+        "murciana",
+        "NNNOVA",
+        "noche",
+        "octubre",
+        "Paginas",
+        "Parrafo",
+        "Parrafos",
+        "PASADOS",
+        "PELACATS",
+        "Percutor",
+        "PRECIOS",
+        "predeploy",
+        "presentamos",
+        "PROXIMOS",
+        "Sábado",
+        "sacó",
+        "Sala",
+        "Socios",
+        "taquilla",
+        "tarjeta",
+        "Tarjetas",
+        "TEKNO",
+        "texto",
+        "titulo",
+        "trabajo",
+        "tras",
+        "VALOA",
+        "viernes",
+        "vuelve",
+        "ZUTATEN"
     ]
 }
